# OSM-Server

./: LICENSE  OSC_Address_Specification.ods  OSM-Server.cabal  README.md  osm-server.cabal  stack.yaml
app/: Main.hs
documents/: concept.md.backup  message.md  server
src/: Connection.hs  Main.hs  OSCMessage.hs
ssl/: osm-server.crt  osm-server.csr  osm-server.key  osm-server.key.secure
