name:                osm-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/jazzyeagle/osm-server
license:             BSD3
license-file:        LICENSE
author:              Jason Harrer
maintainer:          jazzyeagle79@gmail.com
copyright:           2016 Jason Harrer
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Connection
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , conduit-extra
                     , network-conduit-tls
  default-language:    Haskell2010

executable osm-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , conduit
                     , conduit-extra
                     , network-conduit-tls
                     , osm-server
  default-language:    Haskell2010

test-suite osm-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , osm-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/osm-server
